# Farm-PLC-smart-sys

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  package.json  pnpm-lock.yaml  run.bat
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  database.py  main.py  seed.py
apps/api/app/models/: __init__.py  ai.py  alarm.py  base.py  command.py  event_log.py  farm.py  irrigation_cycle.py  pump.py  schedule.py  sensor.py  telemetry.py  user.py  valve.py  water_source.py  zone.py
apps/api/app/routers/: commands.py  devices.py  farm.py  health.py  state.py  websocket.py  zones.py
apps/api/app/schemas/: __init__.py  command.py  common.py  device.py  farm.py  state.py  zone.py
apps/mobile/: package.json
apps/simulator/: pyproject.toml  requirements.txt
apps/simulator/src/: client.py  engine.py  main.py  scenarios.py  state.py
apps/web/: package.json
apps/web/src/: App.tsx  index.css
apps/web/src/components/: KPICard.tsx  LiveMap.tsx  ZoneDrawer.tsx
apps/web/src/hooks/: useFarmConnector.ts
apps/web/src/layouts/: DashboardLayout.tsx
apps/web/src/pages/: AlarmCenter.tsx  Dashboard.tsx  Login.tsx
docs/: AI_AGENT_RUNBOOK.md  AI_FEATURES.md  ALARM_MATRIX.md  API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DOMAIN_MODEL.md  HARDWARE_BOM_DRAFT.md  IMPLEMENTATION_PLAN.md  IO_LIST.md  PLC_CONTROL_LOGIC.md  PRD.md  README.md  REALTIME_EVENTS.md  SIMULATION_PLAN.md  TEST_PLAN.md  UI_WIREFRAMES.md
infra/db/: .gitkeep
infra/docker/: .gitkeep
