[project]
name = "algaroshy-api"
version = "0.1.0"
description = "Algaroshy Farm Smart Irrigation System — Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "websockets>=15.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "black>=25.1.0",
]
postgres = [
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
