[project]
name = "algaroshy-simulator"
version = "0.1.0"
description = "Algaroshy Farm Smart Irrigation System — Simulation Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.0",
    "httpx>=0.28.0",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
